Change home path in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Configuration for the port and context path for the app
 server.port=8090
-server.servlet.context-path=/Boot
+server.servlet.context-path=/BAP
 
 #Actuator Settings
 management.endpoint.health.show-details=always
